--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -15,39 +15,54 @@
 
     </com.esri.android.map.MapView>
 
-    <Button
-        android:id="@+id/poi_collect"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#49878787"
-        android:text="POI"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
-    <Button
-        android:id="@+id/louyu_collect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#49878787"
-        android:text="楼宇采集"
-        android:layout_marginLeft="14dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintLeft_toRightOf="@+id/poi_collect"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-    <Button
-        android:id="@+id/newploygon_collect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#49878787"
-        android:text="面采集"
-        android:layout_marginLeft="14dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintLeft_toRightOf="@+id/louyu_collect"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+
+        >
+        <Button
+            android:id="@+id/poi_collect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_back_selector"
+            android:text="POI"
+
+            />
+        <Button
+            android:id="@+id/louyu_collect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_back_selector"
+
+            android:text="楼宇采集"
+            android:layout_marginLeft="14dp"
+
+            />
+        <Button
+            android:id="@+id/newploygon_collect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_back_selector"
+
+            android:text="面采集"
+            android:layout_marginLeft="14dp"
+            />
+        <Button
+            android:id="@+id/jiaotong_collect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_back_selector"
+
+            android:text="村采集"
+            android:layout_marginLeft="14dp"
+
+            />
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/dingwei_collect"
         android:layout_width="30dp"
@@ -68,17 +83,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
-    <Button
-        android:id="@+id/jiaotong_collect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#49878787"
-        android:text="村采集"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="14dp"
-        app:layout_constraintTop_toBottomOf="@+id/newploygon_collect"
-        android:layout_marginTop="10dp"
-        />
+
     <ImageView
         android:id="@+id/tianjia_collect"
         android:layout_width="32dp"
@@ -126,5 +131,17 @@
             android:layout_marginLeft="14dp"
             />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/selectpoint_collect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btn_back_selector"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="范围选择"
+        android:layout_marginRight="14dp"
+        app:layout_constraintBottom_toTopOf="@+id/linear_tools_collect"
+        android:layout_marginBottom="10dp"
+        />
 
 </android.support.constraint.ConstraintLayout>
