--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,20 +9,20 @@
     <com.esri.android.map.MapView
         android:id="@+id/mapview_collect"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-      >
+        android:layout_height="match_parent">
 
     </com.esri.android.map.MapView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="20dp"
 
         >
+
         <Button
             android:id="@+id/poi_collect"
             android:layout_width="wrap_content"
@@ -32,33 +31,35 @@
             android:text="POI"
 
             />
+
         <Button
             android:id="@+id/louyu_collect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_back_selector"
-
-            android:text="楼宇采集"
             android:layout_marginLeft="14dp"
 
+            android:background="@drawable/btn_back_selector"
+            android:text="楼宇采集"
+
             />
+
         <Button
             android:id="@+id/newploygon_collect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_back_selector"
-
-            android:text="面采集"
             android:layout_marginLeft="14dp"
-            />
+
+            android:background="@drawable/btn_back_selector"
+            android:text="面采集" />
+
         <Button
             android:id="@+id/jiaotong_collect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_back_selector"
-
-            android:text="村采集"
             android:layout_marginLeft="14dp"
+
+            android:background="@drawable/btn_back_selector"
+            android:text="村采集"
 
             />
     </LinearLayout>
@@ -67,43 +68,41 @@
         android:id="@+id/dingwei_collect"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@drawable/dingwei_icon_selector"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginLeft="14dp"
         android:layout_marginBottom="60dp"
-        />
+        android:layout_marginLeft="14dp"
+        android:src="@drawable/dingwei_icon_selector"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
     <ImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/center_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ImageView
         android:id="@+id/tianjia_collect"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:background="#49878787"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="14dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="#49878787"
         android:src="@drawable/dingdian_icon_selector"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/linear_tools_collect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="center"
-        >
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <Button
             android:id="@+id/baocun_collect"
@@ -113,35 +112,46 @@
             android:text="保存"
 
             />
+
         <Button
             android:id="@+id/houtui_collect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="14dp"
             android:background="#49878787"
             android:text="后退"
-            android:layout_marginLeft="14dp"
 
             />
+
         <Button
             android:id="@+id/chanel_collect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#49878787"
-            android:text="取消"
             android:layout_marginLeft="14dp"
-            />
+            android:background="#49878787"
+            android:text="取消" />
     </LinearLayout>
 
     <Button
         android:id="@+id/selectpoint_collect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/btn_back_selector"
-        app:layout_constraintRight_toRightOf="parent"
-        android:text="范围选择"
-        android:layout_marginRight="14dp"
-        app:layout_constraintBottom_toTopOf="@+id/linear_tools_collect"
         android:layout_marginBottom="10dp"
-        />
+        android:background="@drawable/btn_back_selector"
+        android:text="范围选择"
+        app:layout_constraintBottom_toTopOf="@+id/linear_tools_collect"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/btn_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/btn_back_selector"
+        android:text="菜单"
+        app:layout_constraintBottom_toTopOf="@+id/linear_tools_collect"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
