--- a/app/src/main/res/layout/activity_village_border.xml
+++ b/app/src/main/res/layout/activity_village_border.xml
@@ -53,7 +53,6 @@
             android:text="后退"
 
             />
-
         <Button
             android:id="@+id/chanel_collect"
             android:layout_width="wrap_content"
@@ -62,4 +61,13 @@
             android:background="#49878787"
             android:text="取消" />
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/center_icon2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
